kubernetes/apps/renovate/renovate-operator/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ${APP}
spec:
  hostnames: ["${SUBDOMAIN:=${APP}}.${SECRET_DOMAIN}"]
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: ${APP}
          port: 8081
      matches:
        - path:
            type: PathPrefix
            value: /
